--- a/travis/java/.travis.yml
+++ b/travis/java/.travis.yml
@@ -2,16 +2,22 @@ sudo: false
 language: java
 jdk:
   - oraclejdk8
+env:
+  global:
+    - OWNER=alg-owner
+    - ALGORITHM_NAME=concise-alg-name
+    - ALGORITHMIA_USER=travis
+    - ES_ALGORITHM_DESCRIPTOR=$OWNER/$ALGORITHM_NAME/$TRAVIS_COMMIT
 deploy:
   - provider: script
     skip_cleanup: true
-    script: bash scripts/deploy.sh -a $algo_name -u $algo_user -p $algo_password
+    script: bash scripts/deploy.sh -a $ALGORITHM_NAME -u $ALGORITHMIA_USER -p $ALGORITHMIA_PASSWORD
     on:
       branch: master
       tags: false
   - provider: script
     skip_cleanup: true
-    script: bash scripts/publish.sh -a $algo_name -k $algo_key -t $TRAVIS_TAG -g $TRAVIS_REPO_SLUG
+    script: bash scripts/publish.sh -a $ALGORITHM_NAME -k $ES_ALGORITHMIA_API_KEY -t $TRAVIS_TAG -g $TRAVIS_REPO_SLUG
     on:
       branch: master
       tags: true
