--- a/travis/scala/.travis.yml
+++ b/travis/scala/.travis.yml
@@ -2,6 +2,12 @@ sudo: false
 language: scala
 scala:
   - 2.11.11
+env:
+  global:
+    - OWNER=alg-owner
+    - ALGORITHM_NAME=concise-alg-name
+    - ALGORITHMIA_USER=travis
+    - ES_ALGORITHM_DESCRIPTOR=$OWNER/$ALGORITHM_NAME/$TRAVIS_COMMIT
 script:
   - sbt ++$TRAVIS_SCALA_VERSION test
 jdk:
@@ -9,13 +15,15 @@ jdk:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: bash scripts/deploy.sh -a $algo_name -u $algo_user -p $algo_password
+    script: bash scripts/deploy.sh -a $ALGORITHM_NAME -u $ALGORITHMIA_USER -p $ALGORITHMIA_PASSWORD
     on:
       branch: master
       tags: false
   - provider: script
     skip_cleanup: true
-    script: bash scripts/publish.sh -a $algo_name -k $algo_key -t $TRAVIS_TAG -g $TRAVIS_REPO_SLUG
+    script: bash scripts/publish.sh -a $ALGORITHM_NAME -k $ES_ALGORITHMIA_API_KEY -t $TRAVIS_TAG -g $TRAVIS_REPO_SLUG
     on:
       branch: master
       tags: true
+after_deploy:
+  - sbt ++$TRAVIS_SCALA_VERSION it:test
