--- a/travis/scala/.travis.yml
+++ b/travis/scala/.travis.yml
@@ -27,5 +27,5 @@ deploy:
       branch: master
       tags: true
 after_deploy:
-  - echo "Testing deployed endpoint $ES_ALGORITHM_DESCRIPTOR"
+  - echo "Testing deployed endpoint"
   - sbt ++$TRAVIS_SCALA_VERSION it:test
